--- a/plugins/dynamix/Syslinux.page
+++ b/plugins/dynamix/Syslinux.page
@@ -27,7 +27,7 @@ $default = @file_get_contents("$file-") ?: $current;
 $current = preg_replace(["/\r\n/","/\r/","/\n$/"],["\n","\n",""],$current);
 $default = preg_replace(["/\r\n/","/\r/","/\n$/"],["\n","\n",""],$default);
 
-$global  = 'Global Configuration';
+$title   = 'Global Configuration';
 $menu    = 'menu default';
 $mark    = 'label ';
 ?>
@@ -56,7 +56,7 @@ case 'black':
 <script src="<?autov('/webGui/javascript/jquery.switchbutton.js')?>"></script>
 <script>
 const menu = '<?=$menu?>';
-const global = '<?=$global?>';
+const title = '<?=$title?>';
 const mark = '<?=$mark?>';
 
 Array.prototype.indent = function(o) {
@@ -97,7 +97,7 @@ function setDefault(form) {
   $(form).find('textarea.menu').each(function(i){
     if (i < text.length) {
       var area = text[i].split('\n');
-      var label = (i) ? area.shift():global;
+      var label = (i) ? area.shift():title;
       var start = (area[0]==menu);
       var checked = start ? ' checked':'';
       if (i) label += "<span style='float:right'><input type='checkbox' id='input-"+i+"' title='Set default boot menu' onchange='changeMenu(this.form,this.id,true)'"+checked+"></span>";
@@ -211,7 +211,7 @@ Syslinux configuration:
 : <?$i=0;
   foreach (array_map('strip',explode($mark,$current)) as $area):
   $area = explode("\n", $area);
-  $label = ($i) ? array_shift($area):$global;
+  $label = ($i) ? array_shift($area):$title;
   $start = in_array($menu,$area);
   if ($start) unset($area[array_search($menu,$area)]);
 ?><span id="label-<?=$i?>" class="<?=$start?'array':'system'?>"><?=$label?>
