--- a/plugins/dynamix/Syslinux.page
+++ b/plugins/dynamix/Syslinux.page
@@ -79,16 +79,16 @@ function prepareMenu(form) {
       var start = $('#input-'+i).prop('checked') ? menu+'\n' : '';
       area.push(start+$(this).val());
     });
-    var text = '';
+    var text = [];
     for (var i=0; i < label.length; i++) {
       if (i==0) {
-        text += area[i]+'\n';
+        text.push(area[i]);
       } else {
-        text += mark+label[i]+'\n';
-        text += area[i].replace(/^|(\n)/g,'$1  ')+'\n';
+        text.push(mark+label[i]);
+        text.push(area[i].replace(/^|(\n)/g,'$1  '));
       }
     }
-    form.text.value = text;
+    form.text.value = text.join('\n')+'\n';
   }
   form.basic.disabled = true;
 }
