--- a/plugins/dynamix/styles/default-azure.css
+++ b/plugins/dynamix/styles/default-azure.css
@@ -56,11 +56,11 @@ form+p{display:none}
 #nav-block{-ms-overflow-style:none;overflow:-moz-scrollbars-none}
 #nav-block.mozilla{margin-left:-17px;overflow-y:scroll}
 #nav-block>div{direction:ltr}
-#nav-item{width:24px;text-align:left;padding:14px 24px 14px 16px;border-bottom:#42453E 1px solid;font-size:18px;overflow:hidden}
+#nav-item{width:40px;text-align:left;padding:14px 24px 14px 0;border-bottom:#42453E 1px solid;font-size:18px;overflow:hidden;transition:.2s background-color ease}
 #nav-item:hover{width:150px;color:#5D6833;background:#ABC056;border-bottom-color:#5D6833;-webkit-transition:all 0.2s ease-in-out;transition:all 0.2s ease-in-out}
 #nav-item:hover a{color:#5D6833;background:#ABC056}
 #nav-item img{display:none}
-#nav-item a{color:#A6A7A7;text-decoration:none}
+#nav-item a{color:#A6A7A7;text-decoration:none;padding:19px 80px 12px 16px}
 #nav-item a:before{font-family:docker-icon,fontawesome;font-size:26px;margin-right:25px}
 #nav-item.active,#nav-item.active a{color:#5D6833;background:#ABC056}
 #nav-item.HelpButton.active:hover{background:#ABC056;font-size:18px}
