--- a/plugins/dynamix/styles/default-gray.css
+++ b/plugins/dynamix/styles/default-gray.css
@@ -63,8 +63,8 @@ form+p{display:none}
 #nav-item a{color:#A6A7A7;text-decoration:none;padding:19px 80px 12px 16px}
 #nav-item a:before{font-family:docker-icon,fontawesome;font-size:26px;margin-right:25px}
 #nav-item.active,#nav-item.active a{color:#5D6833;background:#ABC056}
-#nav-item.HelpButton.active:hover{background:#ABC056;font-size:18px}
-#nav-item.HelpButton.active{background:#121510;font-size:0}
+#nav-item.HelpButton.active:hover,#nav-item.HelpButton.active a:hover{background:#ABC056;font-size:18px}
+#nav-item.HelpButton.active,#nav-item.HelpButton.active a{background:#121510;font-size:0}
 #nav-item a i{display:none}
 #nav-user{display:block;float:left;text-align:center;border:none}
 #nav-user.probe{font-size:11px;margin-left:3px;margin-right:8px}
