Change wording on dashboard page "memory total usable"

--- a/plugins/dynamix/DashStats.page
+++ b/plugins/dynamix/DashStats.page
@@ -235,7 +235,7 @@ $dck = exec("df /var/lib/docker|grep -om1 '^/'");
 <tr class='wide'><td>Memory usage</td><td colspan='3'><div class='usage-disk sys'><span id='sys0' style='width:0'></span></div></td></tr>
 <tr class='wide'><td>flash log docker</td><td><div class='usage-disk sys'><span id='sys1' style='width:0'></span></div></td><td><div class='usage-disk sys'><span id='sys2' style='width:0'></span></div></td>
 <td><?if ($dck):?><div class='usage-disk sys'><span id='sys3' style='width:0'></span></div><?else:?>Not available<?endif;?></td></tr>
-<tr><td rowspan='2'>Memory size</td><td>allocated</td><td colspan='2' class='blue'><?=my_scale($total,$unit,3)." $unit"?></td></tr>
+<tr><td rowspan='2'>Memory size</td><td>total usable</td><td colspan='2' class='blue'><?=my_scale($total,$unit,3)." $unit"?></td></tr>
 <tr><td>installed</td><td colspan='2' class='blue'><?="$memory_installed $size ".($ecc_support=='None'?'':$ecc_support)."<br>max. installable capacity $memory_maximum $size"?></td></tr>
 </tbody>
 <tbody>
