--- a/plugins/dynamix/CPUset.page
+++ b/plugins/dynamix/CPUset.page
@@ -139,9 +139,8 @@ function reset(form) {
 function buttons(doc) {
   // we need the Apply and Done buttons react on checkbox changes
   $(doc).find('input[type=checkbox]').each(function(){$(this).on('input change',function(){
-    var form = $(this).parentsUntil('form').parent();
-    form.find('input[value="Apply"]').prop('disabled',false);
-    form.find('input[value="Done"]').val('Reset').prop('onclick',null).off('click').click(function(){reset(doc);});
+    $(doc).find('input[value="Apply"]').prop('disabled',false);
+    $(doc).find('input[value="Done"]').val('Reset').prop('onclick',null).off('click').click(function(){reset(doc);});
   });});
 }
 $(function(){
